Minor changes to make compatible with JDK1.4.  Note that this means that AntiSamy functionality is temporarily not available.  You can comment in the getValidSafeHTML method in Validator if you need this.